--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -35,6 +35,10 @@ on:
         default: "./benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj"
         required: true
 
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
+
 env:
   CI: true
   NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
@@ -75,6 +79,8 @@ jobs:
       max-regression-pct: ${{ fromJSON(vars.MAX_REGRESSION_PCT) || 10 }}
 
   release:
+    name: Release Stable
+    needs: [build, test, benchmarks]
     if: ${{ github.event_name == 'workflow_dispatch' || (startsWith(github.ref, 'refs/tags/v') && !contains(github.ref_name,'-')) }}
     runs-on: ubuntu-latest
     timeout-minutes: 30
