--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -70,7 +70,7 @@ concurrency:
 jobs:
   build:
     name: Build
-    uses: .github/workflows/build.yml
+    uses: ./.github/workflows/build.yml
     if: >
       ${{ github.event_name != 'push' ||
           (!contains(github.event.head_commit.message, '[skip ci]')) &&
