--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -70,7 +70,7 @@ concurrency:
 jobs:
   build:
     name: Build
-    uses: ./.github/workflows/build.yml
+    uses: ./.github/workflows/build.yaml
     if: >
       ${{ github.event_name != 'push' ||
           (!contains(github.event.head_commit.message, '[skip ci]')) &&
@@ -84,7 +84,7 @@ jobs:
   test:
     name: Test
     needs: build
-    uses: ./.github/workflows/test.yml
+    uses: ./.github/workflows/test.yaml
     with:
       os: ${{ inputs.os || vars.MATRIX_OS || '["ubuntu-latest"]' }}
       dotnet-version: ${{ inputs.dotnet-version || vars.DOTNET_VERSION || '9.0.x' }}
@@ -98,7 +98,7 @@ jobs:
     name: Benchmarks (Linux only)
     needs: build
     if: ${{ inputs.run-benchmarks || fromJSON(vars.RUN_BENCHMARKS) || true }}
-    uses: ./.github/workflows/benchmarks.yml
+    uses: ./.github/workflows/benchmarks.yaml
     with:
       os: ${{ inputs.os || vars.MATRIX_OS || '["ubuntu-latest"]' }}
       dotnet-version: ${{ inputs.dotnet-version || vars.DOTNET_VERSION || '9.0.x' }}
