--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,6 +10,7 @@ on:
         default: '["ubuntu-latest"]'
 
       dotnet-version:
+        description: "Version of .NET SDK to use"
         type: string
         required: true
         default: "9.0.x"
@@ -39,6 +40,7 @@ on:
         default: false
 
       min-coverage-pct:
+        description: "Minimum acceptable code coverage percentage"
         type: number
         required: true
         default: 75
